// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LoadingSpinner Snapshot Testing should match snapshot with custom props 1`] = `
<View
  className="items-center justify-center p-2 m-4"
  testID="loading-spinner-container"
>
  <ActivityIndicator
    color="#00ff00"
    size="small"
    testID="activity-indicator"
  />
</View>
`;

exports[`LoadingSpinner Snapshot Testing should match snapshot with default props 1`] = `
<View
  className="items-center justify-center "
  testID="loading-spinner-container"
>
  <ActivityIndicator
    color="#2563eb"
    size="large"
    testID="activity-indicator"
  />
</View>
`;
